# scene-tree-view

./: .gitignore  CMakeLists.txt  GEMINI.md  INSTALLATION_INSTRUCTIONS.md  README.md  TODO.md  VERSION_HISTORY.md  buildspec.json  com.obsproject.Studio.Plugin.SceneTreeView.yaml  test_build.bat
.augster/: 20250125-cross-platform-support-trajectory.md  20250125-implement-cross-platform-trajectory.md
.gemini/: google_cpp_style_guide.md
.github/workflows/: build.yml  release.yml
cmake/: version.h.in
data/locale/: en-US.ini  pt-BR.ini  ru-RU.ini
flatpak/: com.obsproject.Studio.Plugin.SceneTreeView.yaml
forms/: scene_tree_view.ui
obs_scene_tree_view/: Crash_Report.txt  obs_scene_tree_view.cpp  obs_scene_tree_view.h  obs_scene_tree_view_actions.cpp  plugin_main.cpp  stv_item_model.cpp  stv_item_model.h  stv_item_view.cpp  stv_item_view.h
scripts/: build-linux.sh  install-linux.sh  install-macos.sh  install-windows.ps1  update-authors.sh
