set(PROJECT_NAME "obs_scene_tree_view")
set(HEADER_DIRECTORY "obs_scene_tree_view")

set(NAMESPACE_NAME "${PROJECT_NAME}")

set(LIBRARY_NAME "${PROJECT_NAME}")
set(EXECUTABLE_NAME "${PROJECT_NAME}Exec")
set(TEST_NAME "${PROJECT_NAME}Tests")

set(LIB_EXPORT_NAME "${LIBRARY_NAME}Targets")
set(LIB_CONFIG_NAME "${LIBRARY_NAME}Config")
set(LIB_VERSION_NAME "${LIB_CONFIG_NAME}Version")

# Read buildspec.json metadata
file(READ "${CMAKE_CURRENT_SOURCE_DIR}/buildspec.json" BUILDSPEC_CONTENTS)
string(JSON PROJECT_VERSION_STR GET "${BUILDSPEC_CONTENTS}" "version")
string(JSON PROJECT_WEBSITE GET "${BUILDSPEC_CONTENTS}" "website")
string(JSON PROJECT_EMAIL GET "${BUILDSPEC_CONTENTS}" "email")
string(JSON PROJECT_AUTHOR GET "${BUILDSPEC_CONTENTS}" "author")
string(JSON PROJECT_CONTRIBUTORS GET "${BUILDSPEC_CONTENTS}" "contributors")

cmake_minimum_required(VERSION 3.25)
project("${PROJECT_NAME}" VERSION ${PROJECT_VERSION_STR})


# Platform detection
if(WIN32)
	set(OS_WINDOWS TRUE)
elseif(APPLE)
	set(OS_MACOS TRUE)
elseif(UNIX)
	set(OS_LINUX TRUE)
endif()

# Cross-platform configuration
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

# macOS universal binary support
if(OS_MACOS)
	if(NOT CMAKE_OSX_ARCHITECTURES)
		set(CMAKE_OSX_ARCHITECTURES "x86_64;arm64" CACHE STRING "macOS architectures" FORCE)
	endif()
	if(NOT CMAKE_OSX_DEPLOYMENT_TARGET)
		set(CMAKE_OSX_DEPLOYMENT_TARGET "13.0" CACHE STRING "macOS deployment target" FORCE)
	endif()
endif()

if(NOT DEFINED BUILD_IN_OBS)
		set(BUILD_IN_OBS OFF)
endif()

# Include OBS dependencies configuration (sets CMAKE_PREFIX_PATH)
if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/cmake/obs-dependencies.cmake")
    include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/obs-dependencies.cmake")
endif()

find_package(Qt6 REQUIRED COMPONENTS Widgets)

if(NOT ${BUILD_IN_OBS})
		set(CMAKE_CXX_STANDARD 17)
		set(CMAKE_CXX_STANDARD_REQUIRED ON)

		find_package(libobs REQUIRED)
		find_package(obs-frontend-api REQUIRED)

		if(NOT DEFINED LIBOBS_PLUGIN_DESTINATION)
				set(LIBOBS_PLUGIN_DESTINATION "lib/obs-plugins")
		endif()

		if(NOT DEFINED LIBOBS_PLUGIN_DATA_DESTINATION)
				set(LIBOBS_PLUGIN_DATA_DESTINATION "share/obs/obs-plugins")
		endif()

		set(OBS_PLUGIN_LIB_DIR "${LIBOBS_PLUGIN_DESTINATION}" CACHE PATH "Path to obs plugins (relative to CMAKE_INSTALL_PREFIX)")
		set(OBS_PLUGIN_DATA_DIR "${LIBOBS_PLUGIN_DATA_DESTINATION}" CACHE PATH "Path to scene tree view data dir (relative to CMAKE_INSTALL_PREFIX)")

		if(WIN32)
				message(WARNING "Building ${PROJECT_NAME} outside of OBS is currently not supported")
		endif()
endif()

# Include OBS dependencies configuration (sets CMAKE_PREFIX_PATH)


# Include OBS dependencies configuration (sets CMAKE_PREFIX_PATH)

set(LIB_SRC_FILES
		obs_scene_tree_view/obs_scene_tree_view.cpp
		obs_scene_tree_view/stv_item_model.cpp
		obs_scene_tree_view/stv_item_view.cpp
)


##########################################
## Version
configure_file(cmake/version.h.in "${CMAKE_CURRENT_BINARY_DIR}/include/${HEADER_DIRECTORY}/version.h" @ONLY)


##########################################
## Qt6 UI
set(CMAKE_AUTOUIC_SEARCH_PATHS ${CMAKE_AUTOUIC_SEARCH_PATHS} "${CMAKE_CURRENT_SOURCE_DIR}/forms")
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)


##########################################
## Library
add_library(${LIBRARY_NAME} SHARED ${LIB_SRC_FILES} ${VT_UI_HEADERS})
add_library("${NAMESPACE_NAME}::${LIBRARY_NAME}" ALIAS ${LIBRARY_NAME})
target_compile_options(${LIBRARY_NAME} PUBLIC $<$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:GNU>>:-Wall -Wextra>)
target_compile_options(${LIBRARY_NAME} PRIVATE $<$<CXX_COMPILER_ID:MSVC>:/W4>)

set_target_properties(${LIBRARY_NAME} PROPERTIES PREFIX "")

target_include_directories(${LIBRARY_NAME}
		PUBLIC
				"$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>"
				"$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
				"$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/include>"

		PRIVATE
)

target_link_libraries(${LIBRARY_NAME}
		PUBLIC
				OBS::libobs
				OBS::obs-frontend-api
				Qt6::Widgets

		PRIVATE
)


##########################################
## Install files
if(${BUILD_IN_OBS})
		install_obs_plugin_with_data(${LIBRARY_NAME} data)
else()
		install(TARGETS ${LIBRARY_NAME}
				EXPORT ${LIB_EXPORT_NAME}
				LIBRARY DESTINATION "${OBS_PLUGIN_LIB_DIR}"
				ARCHIVE DESTINATION "${OBS_PLUGIN_LIB_DIR}")

		install(DIRECTORY "data/locale"
				DESTINATION "${OBS_PLUGIN_DATA_DIR}/${PROJECT_NAME}")
endif()

# Include OBS dependencies configuration (sets CMAKE_PREFIX_PATH)
